--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               </div>
             </div>
             <div class="col-sm-4 col-md-4 col-lg-4 pe-5">
-              <div class="card" style="width: 18rem;">
+              <div class="card rimac" style="width: 18rem;">
                 <div class="car-img">
                   <a href="#" class="car-care">Car Care</a>
                   <img src="assets/photos/supercar.jpg" class="card-img-top" alt="...">
