--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
                   <div class="d-flex justify-content-center align-items-center">
                     <img src="assets/photos/user-9.jpg" alt="" class="spilder3">
                   </div>
-                  <h4 class="name">Hanon</h4>
-                  <a href="#" class="username">@superHanon</a>
+                  <h4 class="name">Alex</h4>
+                  <a href="#" class="username">@Alex</a>
                   <div class="mt-2 mb-3 icons">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
