--- a/index.html
+++ b/index.html
@@ -114,50 +114,46 @@
 
     <section class="container">
       <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-6">
+        <div class="col-sm-12 col-md-6 col-lg-6">
           <div class="car-img">
             <img src="assets/photos/audi.webp" alt="" class="main-cars">
             <a href="#" class="btn shop-now">Shop Now</a>
           </div>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-6 mt-5">
-          <div class="row d-flex justify-content-evenly">
-            <div class="col-sm-6 col-md-4 col-lg-4">
-              <div class="card tesla" style="width: 18rem;">
-                <div class="car-img">
-                  <a href="#" class="car-care">Car Care</a>
-                  <img src="assets/photos/tesla.jpg" class="card-img-top" alt="...">
-                </div>
-                <div class="card-body">
-                  <div>
-                    <h5 class="card-title">Telsa</h5>
-                    <p class="card-text">Brand</p>
-                  </div>
-                  <div class="d-flex justify-content-evenly text-center align-items-center">
-                    <del class="numbers">950K$</del>
-                    <h5 class="numbers pt-2">850K$</h5>
-                    <a href="#" class="btn discount">10% OFF</a>
-                  </div>
-                </div>
+        <div class="col-sm-12 col-md-3 col-lg-3 mt-4">
+          <div class="card tesla" style="width: 18rem;">
+            <div class="car-img">
+              <a href="#" class="car-care">Car Care</a>
+              <img src="assets/photos/tesla.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <div>
+                <h5 class="card-title">Telsa</h5>
+                <p class="card-text">Brand</p>
+              </div>
+              <div class="d-flex justify-content-evenly text-center align-items-center">
+                <del class="numbers">950K$</del>
+                <h5 class="numbers pt-2">850K$</h5>
+                <a href="#" class="btn discount">10% OFF</a>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-4">
-              <div class="card" style="width: 20rem;">
-                <div class=" car-img">
-                  <a href="#" class="category">Category</a>
-                  <img src="assets/photos/ferrari.jpg" class="card-img-top" alt="...">
-                </div>
-                <div class="card-body">
-                  <div>
-                    <h5 class="card-title">Ferrai</h5>
-                    <p class="card-text">Brand</p>
-                  </div>
-                  <div class="d-flex justify-content-evenly text-center align-items-center">
-                    <del class="numbers">850K$</del>
-                    <h5 class="numbers pt-2">750K$</h5>
-                    <a href="#" class="btn discount">10% OFF</a>
-                  </div>
-                </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3 col-lg-3 mt-4">
+          <div class="card" style="width: 20rem;">
+            <div class=" car-img">
+              <a href="#" class="category">Category</a>
+              <img src="assets/photos/ferrari.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <div>
+                <h5 class="card-title">Ferrai</h5>
+                <p class="card-text">Brand</p>
+              </div>
+              <div class="d-flex justify-content-evenly text-center align-items-center">
+                <del class="numbers">850K$</del>
+                <h5 class="numbers pt-2">750K$</h5>
+                <a href="#" class="btn discount">10% OFF</a>
               </div>
             </div>
           </div>
@@ -165,7 +161,7 @@
       </div>
     </section>
     
-    <section class="container">
+    <!-- <section class="container">
       <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-6 d-flex mt-5">
           <div class="row d-flex gap-5">
@@ -211,6 +207,55 @@
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6">
           <div class="car-img pe-5">
+            <img src="assets/photos/supercar2.jpg" alt="" class="main-cars">
+            <a href="#" class="btn shop-now">Shop Now</a>
+          </div>
+        </div>
+      </div>
+    </section> -->
+
+    <section class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-3 col-lg-3 mt-5">
+          <div class="card" style="width: 18rem;">
+            <div class="car-img">
+              <a href="#" class="car-care">Car Care</a>
+              <img src="assets/photos/lambo.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <div>
+                <h5 class="card-title">Lamborghini</h5>
+                <p class="card-text">Brand</p>
+              </div>
+              <div class="d-flex justify-content-evenly text-center align-items-center">
+                <del class="numbers">950K$</del>
+                <h5 class="numbers pt-2">850K$</h5>
+                <a href="#" class="btn discount">10% OFF</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3 col-lg-3 mt-5">
+          <div class="card rimac" style="width: 18rem;">
+            <div class="car-img">
+              <a href="#" class="car-care">Car Care</a>
+              <img src="assets/photos/supercar.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <div>
+                <h5 class="card-title">Rimac</h5>
+                <p class="card-text">Brand</p>
+              </div>
+              <div class="d-flex justify-content-evenly text-center align-items-center">
+                <del class="numbers">950K$</del>
+                <h5 class="numbers pt-2">850K$</h5>
+                <a href="#" class="btn discount">10% OFF</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="car-img">
             <img src="assets/photos/supercar2.jpg" alt="" class="main-cars">
             <a href="#" class="btn shop-now">Shop Now</a>
           </div>
